<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy previous</string>
    <string name="cont">CONTINUE</string>
    <string name="question_validation_error">Some of your input could not be validated.</string>
    <string name="question_input_required">This field is required.</string>
    <string name="question_input_invalid">This input is not valid.</string>
    <string name="take_photo">Take a photo</string>
    <string name="delete_photo">Delete photo</string>
    <string name="camera_back">Back camera</string>
    <string name="camera_front">Front camera</string>
    <string name="camera_usb">Select USB camera</string>
    <string name="refresh">Refresh</string>
    <string name="camera">Camera</string>
    <string name="camera_no_device">No USB camera found</string>
    <string name="datetime_format">%1$tY-%1$tm-%1$td %1$tH:%1$tM</string>
    <string name="date_format">%1$tY-%1$tm-%1$td</string>
    <string name="time_format">%1$tH:%1$tM</string>
    <string name="android_permission_required">Try again after granting the required system permission.</string>
    <string name="order_question_title">Order information</string>
    <string name="ok">OK</string>
    <string name="setup_tutorial">To get started, create a new device in the "Devices" section of your organizer account in the pretix backend. You will be then presented with a configuration QR code to scan.</string>
    <string name="setup_error_legacy_qr_code">The QR code you scanned is for an old predecessor of this app. Please go to the "Devices" section in your pretix organizer account and create a new device there.</string>
    <string name="setup_error_invalid_qr_code">The QR code you scanned is not a valid configuration code. Please make sure you created the code in the "Devices" section of a pretix organizer account.</string>
    <string name="setup_error_version_too_high">The QR code you scanned is from a newer version of pretix than this app has been built for. Please check if you can get an update for this app!</string>
    <string name="setup_progress">Initializing device…</string>
    <string name="setup_error_request">Request rejected by server. Please double-check your input.</string>
    <string name="setup_error_io">Connection error while trying to reach the server.</string>
    <string name="setup_error_ssl">Security error while trying to reach the server.</string>
    <string name="setup_error_server">Server error while trying to register the device.</string>
    <string name="setup_error_response">The server returned an invalid response.</string>
    <string name="setup_error_failed">The initial connection test failed.</string>
    <string name="setup_error_permissions">The app does not work properly without granting those permissions. Please restart the app.</string>
    <string name="setup_camera_permission_needed">Please grant camera permission to use the QR Scanner</string>
    <string name="setup_open_permissions">Open permission settings</string>
    <string name="setup_grant_camera_permission">Grant camera permission</string>
    <string name="setup_hardware_scanner">Please press the hardware scan buttons of your device to scan.</string>
    <string name="setup_hardware_scanner_switch_to_camera">Use camera instead</string>
    <string name="setup_hint_url">URL</string>
    <string name="setup_hint_token">Token</string>
    <string name="action_manual">Manual setup</string>
    <string name="foreground_service_dialog_title">Service will run in foreground</string>
    <string name="foreground_service_dialog_text">If you enable this feature, to avoid disconnections from your connected device, %1$s will start a foreground service. You will see an ongoing notification about the service. Battery usage might be increased while the service is running. You can stop the service through the notification.</string>
    <string name="foreground_service_stop">Stop service</string>
</resources>
